Added jenkins agent
Signed-off-by: Matt Bentley <mbentley@mbentley.net>